--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!--левый wrapper c логотипом-->
                 <div class="header__logo-wrapper">
                     <img
-                        src="/src/icons/header/header__logo-gas.svg"
+                        src="/src/img/header/header__logo-gas.svg"
                         alt="Логотип Atlant-gaz"
                         class="header__sublogo"
                     />
@@ -50,6 +50,63 @@
                 </div>
             </div>
         </header>
+        <main>
+            <section class="intro">
+                <div class="intro__container container">
+                    <div class="intro__day">
+                        <img
+                            class="intro__day-icon-moon"
+                            src="/src/img/intro/intro__day-icon-moon.svg"
+                            alt="Иконка дня"
+                        />
+                        <img
+                            class="intro__day-icon-arrow"
+                            src="/src/img/intro/intro__day-icon-arrow.svg"
+                            alt="Иконка дня"
+                        />
+                        <img
+                            class="intro__day-icon-sun"
+                            src="/src/img/intro/intro__day-icon-sun.svg"
+                            alt="Дополнительная иконка дня"
+                        />
+                        <p class="intro__day-text">В любое время дня и ночи</p>
+                    </div>
+
+                    <div class="intro__weather">
+                        <img
+                            class="intro__weather-icon-cloud"
+                            src="/src/img/intro/intro__weather-icon-cloud.svg"
+                            alt="Иконка погоды"
+                        />
+                        <img
+                            class="intro__weather-icon-arrow"
+                            src="/src/img/intro/intro__day-icon-arrow.svg"
+                            alt="Иконка погоды"
+                        />
+                        <img
+                            class="intro__weather-icon-snow"
+                            src="/src/img/intro/intro__weather-icon-snow.svg"
+                            alt="Дополнительная иконка погоды"
+                        />
+                        <p class="intro__weather-text">Вне зависимости от погодных условий</p>
+                    </div>
+
+                    <p class="intro__delivery-time">Доставим газ за 4 часа</p>
+
+                    <p class="intro__delivery-area">в любую точку Москвы и Московской области</p>
+
+                    <button class="intro__button">Заказать доставку газа в газгольдер</button>
+
+                    <p class="intro__price-info">Доставка газа всегда по актуальным ценам</p>
+
+                    <img
+                        class="intro__image-truck"
+                        src="/src/img/intro/intro__image-truck.png"
+                        alt="Изображение доставки газа"
+                    />
+                </div>
+            </section>
+        </main>
 
         <script type="module" src="/src/js/script.js"></script>
     </body>
