prices before grid setup

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </header>
         <main>
-            <section class="intro">
+            <!-- <section class="intro">
                 <div class="intro__container container">
                     <div class="intro__day-wrapper">
                         <img
@@ -100,6 +100,55 @@
                         src="/src/img/intro/intro__image-truck.png"
                         alt="Изображение доставки газа"
                     />
+                </div>
+            </section> -->
+            <section class="price">
+                <div class="price__container container">
+                    <h1 class="price__title">Стоимость газа в ваш газгольдер сегодня</h1>
+
+                    <div class="price__content">
+                        <article class="price__card">
+                            <h2 class="price__gas-name">Пропан</h2>
+                            <p class="price__gas-price">от 25 рублей за литр</p>
+                            <p class="price__gas-desc">
+                                Физически испарение происходит до -40 градусов, что позволяет
+                                использовать его в наших с вами погодных условиях
+                            </p>
+                            <button class="price__button">Заказать</button>
+                        </article>
+
+                        <div class="price__mix">
+                            <p class="price__mix-title">Идеальное соотношение</p>
+
+                            <div class="price__mix-values">
+                                <div class="price__mix-item">
+                                    <p>80%</p>
+                                    <p>пропана</p>
+                                </div>
+                                <div class="price__mix-separator"></div>
+                                <div class="price__mix-item">
+                                    <p>20%</p>
+                                    <p>бутана</p>
+                                </div>
+                            </div>
+
+                            <div class="price__image">
+                                <img src="img/truck.png" alt="Газовоз" />
+                            </div>
+                        </div>
+
+                        <article class="price__card">
+                            <h2 class="price__gas-name">Бутан</h2>
+                            <p class="price__gas-price">от 16 рублей за литр</p>
+                            <p class="price__gas-desc">
+                                Испарение Бутана происходит только до 0 градусов и годится для
+                                использования в тёплое время года
+                            </p>
+                            <button class="price__button">Заказать</button>
+                        </article>
+                    </div>
+
+                    <div class="price__decor"></div>
                 </div>
             </section>
         </main>
