feedback section before slider modification

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </div>
                 </div>
             </section> -->
-            <section class="delivery">
+            <!-- <section class="delivery">
                 <div class="delivery__container container">
                     <h1 class="delivery__title">Выберите свой объём Газовоза</h1>
 
@@ -341,6 +341,96 @@
                     <button class="delivery__button intro__button" type="submit">
                         Заказать газ
                     </button>
+                </div>
+            </section> -->
+            <section class="feedback">
+                <h1 class="feedback__title">Отзывы наших клиентов</h1>
+                <div class="feedback__container container">
+                    <div class="feedback__slider swiper">
+                        <div class="feedback__wrapper swiper-wrapper">
+                            <div class="feedback__slide swiper-slide">
+                                <div class="feedback__slide-wrapper">
+                                    <div class="feedback__photo">
+                                        <img
+                                            src="/src/img/feedback/feedback__photo_1.jpeg"
+                                            alt="Фото клиента"
+                                            class="feedback__img"
+                                        />
+                                    </div>
+                                    <div class="feedback__credentials-wrapper">
+                                        <h2 class="feedback__name">Ольга И.</h2>
+                                        <p class="feedback__city">Красногорск</p>
+                                        <p class="feedback__text">
+                                            Я всегда боюсь газа, а особенно боюсь что он может
+                                            взорваться. Андрей, водитель-экспедитор, показал что
+                                            бояться нечего. Моего присутствия даже не понадобилось.
+                                            Спасибо компании за полный цикл обслуживания под ключ.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="feedback__slide swiper-slide">
+                                <div class="feedback__slide-wrapper">
+                                    <div class="feedback__photo">
+                                        <img
+                                            src="/src/img/feedback/feedback__photo_2.jpeg"
+                                            alt="Фото клиента"
+                                            class="feedback__img"
+                                        />
+                                    </div>
+                                    <div class="feedback__credentials-wrapper">
+                                        <h2 class="feedback__name">Александр П.</h2>
+                                        <p class="feedback__city">Люберцы</p>
+                                        <p class="feedback__text">
+                                            Заказал доставку впервые. Всё прошло быстро, курьер
+                                            приехал точно по времени, подключил баллон и проверил
+                                            оборудование. Цены и сервис на высоте, теперь только
+                                            сюда.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="feedback__slide swiper-slide">
+                                <div class="feedback__slide-wrapper">
+                                    <div class="feedback__photo">
+                                        <img
+                                            src="/src/img/feedback/feedback__photo_3.jpeg"
+                                            alt="Фото клиента"
+                                            class="feedback__img"
+                                        />
+                                    </div>
+                                    <div class="feedback__credentials-wrapper">
+                                        <h2 class="feedback__name">Кирил П.</h2>
+                                        <p class="feedback__city">Мытищи</p>
+                                        <p class="feedback__text">
+                                            Очень удобно, что можно заказать газ прямо с сайта.
+                                            Привезли в тот же день, всё аккуратно и вежливо.
+                                            Компания действительно заботится о клиентах, рекомендую.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="feedback__pagination swiper-pagination"></div>
+
+                    <div class="feedback__button feedback__button--prev swiper-button-prev">
+                        <img
+                            src="/src/img/feedback/feedback__button.svg"
+                            alt="Предыдущий отзыв"
+                            class="feedback__arrow"
+                        />
+                    </div>
+                    <div class="feedback__button feedback__button--next swiper-button-next">
+                        <img
+                            src="/src/img/feedback/feedback__button.svg"
+                            alt="Следующий отзыв"
+                            class="feedback__arrow"
+                        />
+                    </div>
                 </div>
             </section>
         </main>
