--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <title>Atlant-gaz</title>
     </head>
     <body>
-        <!-- <header class="header">
+        <header class="header">
             <div class="header__container container">
                 <div class="header__logo-wrapper">
                     <div class="header__logo-element">
@@ -39,9 +39,9 @@
                     </div>
                 </div>
             </div>
-        </header> -->
+        </header>
         <main>
-            <!-- <section class="intro">
+            <section class="intro">
                 <div class="intro__container container">
                     <div class="intro__day-wrapper">
                         <img
@@ -293,8 +293,8 @@
                         </div>
                     </div>
                 </div>
-            </section> -->
-            <!-- <section class="delivery">
+            </section>
+            <section class="delivery">
                 <div class="delivery__container container">
                     <h1 class="delivery__title">Выберите свой объём Газовоза</h1>
 
@@ -342,9 +342,10 @@
                         Заказать газ
                     </button>
                 </div>
-            </section> -->
+            </section>
             <section class="feedback">
                 <h1 class="feedback__title">Отзывы наших клиентов</h1>
+
                 <div class="feedback__container container">
                     <div class="feedback__slider swiper">
                         <div class="feedback__wrapper swiper-wrapper">
@@ -424,6 +425,7 @@
                             class="feedback__arrow"
                         />
                     </div>
+
                     <div class="feedback__button feedback__button--next swiper-button-next">
                         <img
                             src="/src/img/feedback/feedback__button.svg"
@@ -431,6 +433,11 @@
                             class="feedback__arrow"
                         />
                     </div>
+
+                    <div class="feedback__animation-slide-1"></div>
+                    <div class="feedback__animation-slide-2"></div>
+                    <div class="feedback__animation-slide-3"></div>
+                    <div class="feedback__animation-slide-4"></div>
                 </div>
             </section>
         </main>
