--- a/index.html
+++ b/index.html
@@ -440,6 +440,56 @@
                     <div class="feedback__animation-slide-4"></div>
                 </div>
             </section>
+            <section class="faq">
+                <div class="faq__container container">
+                    <h1 class="faq__title">Ответы на часто задаваемые вопросы</h1>
+
+                    <div class="faq__accordion">
+                        <div class="faq__item">
+                            <h2 class="faq__question">Есть ли у вас инженеры в компании?</h2>
+                            <div class="faq__answer">
+                                Да, в штате работают квалифицированные инженеры с опытом более 10
+                                лет. Они контролируют безопасность и качество всех этапов заправки и
+                                обслуживания.
+                            </div>
+                        </div>
+
+                        <div class="faq__item">
+                            <h2 class="faq__question">Делаете ли вы очистку газгольдера?</h2>
+                            <div class="faq__answer">
+                                Да, проводим полную очистку газгольдеров от конденсата и остатков
+                                загрязнений. Используем специализированное оборудование, не
+                                нарушающее герметичность резервуара.
+                            </div>
+                        </div>
+
+                        <div class="faq__item">
+                            <h2 class="faq__question">А вы не испортите газон у меня и соседей?</h2>
+                            <div class="faq__answer">
+                                За счёт длинны шланга 50 м выполняем заправку без заезда на участок.
+                                Газон и территория соседей остаются нетронутыми.
+                            </div>
+                        </div>
+
+                        <div class="faq__item">
+                            <h2 class="faq__question">Вы предоставляете документы для субсидий?</h2>
+                            <div class="faq__answer">
+                                Да, предоставляем полный пакет документов, включая счета, акты и
+                                сертификаты соответствия, необходимых для получения субсидий и
+                                компенсаций.
+                            </div>
+                        </div>
+
+                        <div class="faq__item">
+                            <h2 class="faq__question">Смогу ли я заказать во время праздников?</h2>
+                            <div class="faq__answer">
+                                Да, заявки принимаем и в праздничные дни. Дежурная служба работает
+                                круглосуточно, чтобы обеспечить бесперебойную заправку.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <script type="module" src="/src/js/script.js"></script>
