--- a/index.html
+++ b/index.html
@@ -299,9 +299,7 @@
                     <h1 class="delivery__title">Выберите свой объём Газовоза</h1>
 
                     <div class="delivery__tabs">
-                        <button class="delivery__tabs-button delivery__tabs-button--active">
-                            Малый 2000 л.
-                        </button>
+                        <button class="delivery__tabs-button">Малый 2000 л.</button>
                         <button class="delivery__tabs-button">Средний 6000 л.</button>
                         <button class="delivery__tabs-button">Стандартный 10 000 л.</button>
                         <button class="delivery__tabs-button">Оптовый 40 000 л.</button>
