--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <title>Atlant-gaz</title>
     </head>
     <body>
-        <header class="header">
+        <!-- <header class="header">
             <div class="header__container container">
                 <div class="header__logo-wrapper">
                     <div class="header__logo-element">
@@ -39,9 +39,9 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </header> -->
         <main>
-            <section class="intro">
+            <!-- <section class="intro">
                 <div class="intro__container container">
                     <div class="intro__day-wrapper">
                         <img
@@ -486,6 +486,101 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section> -->
+
+            <section class="question">
+                <div class="question__container container">
+                    <form class="question__form" action="">
+                        <h1 class="question__form-title">
+                            Не нашли ответа на свой вопрос? Задайте их нашему специалисту
+                        </h1>
+                        <input
+                            class="question__form-input question__form-input--name"
+                            name="name"
+                            type="text"
+                            placeholder="Ваше имя"
+                            required
+                        />
+                        <input
+                            class="question__form-input"
+                            name="contact"
+                            type="text"
+                            placeholder="Ваш email или телефон"
+                            required
+                        />
+                        <textarea
+                            class="question__form-textarea"
+                            name="question"
+                            placeholder="Ваш вопрос"
+                            required
+                        ></textarea>
+                        <button class="question__form-button" type="submit">Задать вопрос</button>
+                    </form>
+
+                    <div class="question__specialist">
+                        <img
+                            class="question__specialist-photo"
+                            src="/src/img/question/question__specialist-photo.jpeg"
+                            alt="Фото специалиста"
+                        />
+                        <div class="question__specialist-info">
+                            <p class="question__specialist-name">Роман Ш.</p>
+                            <p class="question__specialist-position">Старший менеджер</p>
+                        </div>
+                    </div>
+
+                    <div class="question__label-wrapper">
+                        <div class="question__label">
+                            <img
+                                class="question__label-img"
+                                src="/src/img/question/question__label-img_1.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="question__label">
+                            <img
+                                class="question__label-img"
+                                src="/src/img/question/question__label-img_2.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="question__label">
+                            <img
+                                class="question__label-img"
+                                src="/src/img/question/question__label-img_3.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="question__label">
+                            <img
+                                class="question__label-img"
+                                src="/src/img/question/question__label-img_4.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="question__label">
+                            <img
+                                class="question__label-img"
+                                src="/src/img/question/question__label-img_5.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="question__label">
+                            <img
+                                class="question__label-img"
+                                src="/src/img/question/question__label-img_6.png"
+                                alt=""
+                            />
+                        </div>
+                    </div>
+
+                    <h2 class="question__buttom-title">
+                        Закажи прямо сейчас и получи бесплатную установку телеметрии﻿
+                    </h2>
+                    <button class="question__order-button intro__button" type="button">
+                        Заказать газ
+                    </button>
                 </div>
             </section>
         </main>
