--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <title>Atlant-gaz</title>
     </head>
     <body>
-        <header class="header">
+        <!-- <header class="header">
             <div class="header__container container">
                 <div class="header__logo-wrapper">
                     <div class="header__logo-element">
@@ -39,9 +39,9 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </header>  -->
         <main>
-            <section class="intro">
+            <!-- <section class="intro">
                 <div class="intro__container container">
                     <div class="intro__day-wrapper">
                         <img
@@ -488,7 +488,6 @@
                     </div>
                 </div>
             </section>
-
             <section class="question">
                 <div class="question__container container">
                     <form class="question__form" action="">
@@ -584,6 +583,48 @@
                     <button class="question__order-button intro__button" type="button">
                         Заказать газ
                     </button>
+                </div>
+            </section> -->
+
+            <section class="footer">
+                <div class="footer__container container">
+                    <div class="footer__wrapper">
+                        <div class="footer__inner">
+                            <h2 class="footer__title">Посетите наш уютный офис</h2>
+
+                            <p class="footer__text">
+                                где мы сможем вас полностью проконсультировать по всем вопросам
+                            </p>
+
+                            <hr class="footer__hr" />
+
+                            <h3 class="footer__subtitle">Офис</h3>
+
+                            <address class="footer__address">
+                                Видное, Белокаменное шоссе, 20
+                            </address>
+
+                            <h4 class="footer__phone-label">Телефон:</h4>
+                            <a class="footer__phone-link" href="tel:+79263306834">
+                                +7 926 330-68-34
+                            </a>
+                        </div>
+
+                        <div class="footer__map">
+                            <iframe
+                                src="https://yandex.by/map-widget/v1/?ll=37.771668%2C55.547159&z=17.65"
+                                class="footer__iframe"
+                                loading="lazy"
+                                allowfullscreen
+                            >
+                            </iframe>
+                        </div>
+                    </div>
+
+                    <a class="footer__link" href="#">Политика конфиденциальности</a>
+                    <a class="footer__link footer__link--right" href="#"
+                        >Согласие на обработку персональных данных</a
+                    >
                 </div>
             </section>
         </main>
